--- a/advanced.html
+++ b/advanced.html
@@ -18,7 +18,7 @@
         <li><a href="#">contact</a></li>
         <li><a href="#">feedback</a></li>
        </ul>
-        <p>k</p>
+        <p>koni</p>
       </nav>
 </body>
 </html>
